PR/51558: ast@: ftp dumps core after usage message when IPv6 URL lacks a slash. Initialize variable so that we don't get random behavior on cleanup.